--- a/client/src/styles/scss/main/body.scss
+++ b/client/src/styles/scss/main/body.scss
@@ -3,6 +3,7 @@ body {
     z-index: 1;
   	font-family: "M Plus Rounded 1c", sans-serif;
     background-color: var(--color-4);
+    min-width: 250px;
   
     h1,
     h2,
